<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.lframework</groupId>
    <artifactId>xingyun</artifactId>
    <name>【${project.artifactId}】凯奔ERP</name>
    <version>1.0.0-SNAPSHOT</version>

    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <modules>
        <module>xingyun-core</module>
        <module>xingyun-api</module>
        <module>xingyun-basedata</module>
        <module>xingyun-sc</module>
        <module>xingyun-chart</module>
        <module>xingyun-settle</module>
        <module>xingyun-sys</module>
<!--        <module>cloud/xingyun-cloud-api</module>-->
        <module>xingyun-comp</module>
<!--        <module>cloud/xingyun-cloud-gateway</module>-->
        <module>xingyun-shkb</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <maven.compiler.release>25</maven.compiler.release>
        <lombok.version>1.18.38</lombok.version>
        <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>3.5.2</maven.surefire.plugin.version>
        <xingyun.version>1.0.0-SNAPSHOT</xingyun.version>
        <jugg.version>5.0.1</jugg.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>com.lframework</groupId>
                <artifactId>parent</artifactId>
                <version>${jugg.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.lframework</groupId>
                <artifactId>mq-starter</artifactId>
                <version>${jugg.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.lframework</groupId>
                <artifactId>xingyun-basedata</artifactId>
                <version>${xingyun.version}</version>
            </dependency>
            <dependency>
                <groupId>com.lframework</groupId>
                <artifactId>xingyun-shkb</artifactId>
                <version>${xingyun.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lframework</groupId>
                <artifactId>xingyun-comp</artifactId>
                <version>${xingyun.version}</version>
            </dependency>
            <dependency>
                <groupId>com.lframework</groupId>
                <artifactId>xingyun-sc</artifactId>
                <version>${xingyun.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lframework</groupId>
                <artifactId>xingyun-chart</artifactId>
                <version>${xingyun.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lframework</groupId>
                <artifactId>xingyun-sys</artifactId>
                <version>${xingyun.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lframework</groupId>
                <artifactId>xingyun-settle</artifactId>
                <version>${xingyun.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lframework</groupId>
                <artifactId>xingyun-core</artifactId>
                <version>${xingyun.version}</version>
            </dependency>

            <!-- POI 5.2.5 依赖 commons-io >= 2.15（UnsynchronizedByteArrayInputStream.builder），
                 magic-api 带入的 2.7 会抢占版本导致导出 NoSuchMethodError -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.15.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Shared compile-time deps inherited by all modules -->
    <dependencies>
        <!-- Keep legacy Swagger 2 annotations compiling under Spring Boot 3 / springdoc -->
        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-annotations</artifactId>
            <version>1.6.14</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <parameters>true</parameters>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <!-- 指定仓库 -->
    <repositories>
        <repository>
            <id>ali-public</id>
            <name>阿里云public库</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <layout>default</layout>
        </repository>

        <repository>
            <id>ali-central</id>
            <name>阿里云central库</name>
            <url>https://maven.aliyun.com/repository/central</url>
        </repository>

        <repository>
            <id>ali-central-old</id>
            <name>阿里云central库old</name>
            <url>https://maven.aliyun.com/nexus/content/groups/public</url>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <profiles-active>dev</profiles-active>
                <discovery-server>127.0.0.1:10000</discovery-server>
            </properties>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <profiles-active>test</profiles-active>
                <discovery-server>127.0.0.1:10000</discovery-server>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <profiles-active>prod</profiles-active>
                <discovery-server>127.0.0.1:10000</discovery-server>
            </properties>
        </profile>
    </profiles>
</project>
